add secret_key_base in docker file

--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -22,5 +22,5 @@ RUN mkdir /myapp
 WORKDIR /myapp
 COPY . /myapp
 RUN bundle install
-RUN bundle exec rails assets:precompile RAILS_ENV=production && \
+RUN SECRET_KEY_BASE=placeholder bundle exec rails assets:precompile RAILS_ENV=production && \
     yarn cache clean
